--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@react-three/drei": "^9.56.26",
     "@react-three/fiber": "^8.11.5",
+    "@react-three/postprocessing": "^2.7.1",
     "@types/three": "^0.149.0",
+    "leva": "^0.9.34",
+    "postprocessing": "^6.30.1",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.58.3",
